include/pocketpy/linalg.h

typedef struct c11_vec2i {
    int x;
    int y;
} c11_vec2i;
typedef struct c11_vec2 {
    float x;
    float y;
} c11_vec2;
typedef struct c11_vec3 {
    float x;
    float y;
    float z;
} c11_vec3;