plugins/flutter/pocketpy/lib/pocketpy_bindings_generated.dart


  late final _py_pickle_dumpsPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref)>>('py_pickle_dumps');
  late final _py_pickle_dumps =
      _py_pickle_dumpsPtr.asFunction<bool Function(py_Ref)>();

  /// Python equivalent to `pickle.loads(val)`.
  bool py_pickle_loads(
    ffi.Pointer<ffi.UnsignedChar> data,
    int size,
  ) {
    return _py_pickle_loads(
      data,
      size,
    );
  }

  late final _py_pickle_loadsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<ffi.UnsignedChar>, ffi.Int)>>('py_pickle_loads');
  late final _py_pickle_loads = _py_pickle_loadsPtr
      .asFunction<bool Function(ffi.Pointer<ffi.UnsignedChar>, int)>();

  /// Unchecked Functions
  py_ObjectRef py_tuple_data(
    py_Ref self,
  ) {
    return _py_tuple_data(
      self,
    );
  }

  late final _py_tuple_dataPtr =
      _lookup<ffi.NativeFunction<py_ObjectRef Function(py_Ref)>>(
          'py_tuple_data');
  late final _py_tuple_data =
      _py_tuple_dataPtr.asFunction<py_ObjectRef Function(py_Ref)>();

  py_ObjectRef py_tuple_getitem(
    py_Ref self,
    int i,
  ) {
    return _py_tuple_getitem(
      self,
      i,
    );
  }

  late final _py_tuple_getitemPtr =
      _lookup<ffi.NativeFunction<py_ObjectRef Function(py_Ref, ffi.Int)>>(
          'py_tuple_getitem');
  late final _py_tuple_getitem =
      _py_tuple_getitemPtr.asFunction<py_ObjectRef Function(py_Ref, int)>();

  void py_tuple_setitem(
    py_Ref self,
    int i,
    py_Ref val,
  ) {
    return _py_tuple_setitem(
      self,
      i,
      val,
    );
  }

  late final _py_tuple_setitemPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_Ref, ffi.Int, py_Ref)>>(
          'py_tuple_setitem');
  late final _py_tuple_setitem =
      _py_tuple_setitemPtr.asFunction<void Function(py_Ref, int, py_Ref)>();

  int py_tuple_len(
    py_Ref self,
  ) {
    return _py_tuple_len(
      self,
    );
  }

  late final _py_tuple_lenPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(py_Ref)>>('py_tuple_len');
  late final _py_tuple_len =
      _py_tuple_lenPtr.asFunction<int Function(py_Ref)>();

  py_ItemRef py_list_data(
    py_Ref self,
  ) {
    return _py_list_data(
      self,
    );
  }

  late final _py_list_dataPtr =
      _lookup<ffi.NativeFunction<py_ItemRef Function(py_Ref)>>('py_list_data');
  late final _py_list_data =
      _py_list_dataPtr.asFunction<py_ItemRef Function(py_Ref)>();

  py_ItemRef py_list_getitem(
    py_Ref self,
    int i,
  ) {
    return _py_list_getitem(
      self,
      i,
    );
  }

  late final _py_list_getitemPtr =
      _lookup<ffi.NativeFunction<py_ItemRef Function(py_Ref, ffi.Int)>>(
          'py_list_getitem');
  late final _py_list_getitem =
      _py_list_getitemPtr.asFunction<py_ItemRef Function(py_Ref, int)>();

  void py_list_setitem(
    py_Ref self,
    int i,
    py_Ref val,
  ) {
    return _py_list_setitem(
      self,
      i,
      val,
    );
  }

  late final _py_list_setitemPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_Ref, ffi.Int, py_Ref)>>(
          'py_list_setitem');
  late final _py_list_setitem =
      _py_list_setitemPtr.asFunction<void Function(py_Ref, int, py_Ref)>();

  void py_list_delitem(
    py_Ref self,
    int i,
  ) {
    return _py_list_delitem(
      self,
      i,
    );
  }

  late final _py_list_delitemPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_Ref, ffi.Int)>>(
          'py_list_delitem');
  late final _py_list_delitem =
      _py_list_delitemPtr.asFunction<void Function(py_Ref, int)>();

  int py_list_len(
    py_Ref self,
  ) {
    return _py_list_len(
      self,
    );
  }

  late final _py_list_lenPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(py_Ref)>>('py_list_len');
  late final _py_list_len = _py_list_lenPtr.asFunction<int Function(py_Ref)>();

  void py_list_swap(
    py_Ref self,
    int i,
    int j,
  ) {
    return _py_list_swap(
      self,
      i,
      j,
    );
  }

  late final _py_list_swapPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_Ref, ffi.Int, ffi.Int)>>(
          'py_list_swap');
  late final _py_list_swap =
      _py_list_swapPtr.asFunction<void Function(py_Ref, int, int)>();

  void py_list_append(
    py_Ref self,
    py_Ref val,
  ) {
    return _py_list_append(
      self,
      val,
    );
  }

  late final _py_list_appendPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_Ref, py_Ref)>>(
          'py_list_append');
  late final _py_list_append =
      _py_list_appendPtr.asFunction<void Function(py_Ref, py_Ref)>();

  py_ItemRef py_list_emplace(
    py_Ref self,
  ) {
    return _py_list_emplace(
      self,
    );
  }

  late final _py_list_emplacePtr =
      _lookup<ffi.NativeFunction<py_ItemRef Function(py_Ref)>>(
          'py_list_emplace');
  late final _py_list_emplace =
      _py_list_emplacePtr.asFunction<py_ItemRef Function(py_Ref)>();

  void py_list_clear(
    py_Ref self,
  ) {
    return _py_list_clear(
      self,
    );
  }

  late final _py_list_clearPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_Ref)>>('py_list_clear');
  late final _py_list_clear =
      _py_list_clearPtr.asFunction<void Function(py_Ref)>();

  void py_list_insert(
    py_Ref self,
    int i,
    py_Ref val,
  ) {
    return _py_list_insert(
      self,
      i,
      val,
    );
  }

  late final _py_list_insertPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_Ref, ffi.Int, py_Ref)>>(
          'py_list_insert');
  late final _py_list_insert =
      _py_list_insertPtr.asFunction<void Function(py_Ref, int, py_Ref)>();

  /// -1: error, 0: not found, 1: found
  int py_dict_getitem(
    py_Ref self,
    py_Ref key,
  ) {
    return _py_dict_getitem(
      self,
      key,
    );
  }

  late final _py_dict_getitemPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(py_Ref, py_Ref)>>(
          'py_dict_getitem');
  late final _py_dict_getitem =
      _py_dict_getitemPtr.asFunction<int Function(py_Ref, py_Ref)>();

  /// true: success, false: error
  bool py_dict_setitem(
    py_Ref self,
    py_Ref key,
    py_Ref val,
  ) {
    return _py_dict_setitem(
      self,
      key,
      val,
    );
  }

  late final _py_dict_setitemPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref, py_Ref, py_Ref)>>(
          'py_dict_setitem');
  late final _py_dict_setitem =
      _py_dict_setitemPtr.asFunction<bool Function(py_Ref, py_Ref, py_Ref)>();

  /// -1: error, 0: not found, 1: found (and deleted)
  int py_dict_delitem(
    py_Ref self,
    py_Ref key,
  ) {
    return _py_dict_delitem(
      self,
      key,
    );
  }

  late final _py_dict_delitemPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(py_Ref, py_Ref)>>(
          'py_dict_delitem');
  late final _py_dict_delitem =
      _py_dict_delitemPtr.asFunction<int Function(py_Ref, py_Ref)>();

  /// -1: error, 0: not found, 1: found
  int py_dict_getitem_by_str(
    py_Ref self,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _py_dict_getitem_by_str(
      self,
      key,
    );
  }

  late final _py_dict_getitem_by_strPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(py_Ref, ffi.Pointer<ffi.Char>)>>(
      'py_dict_getitem_by_str');
  late final _py_dict_getitem_by_str = _py_dict_getitem_by_strPtr
      .asFunction<int Function(py_Ref, ffi.Pointer<ffi.Char>)>();

  /// -1: error, 0: not found, 1: found
  int py_dict_getitem_by_int(
    py_Ref self,
    int key,
  ) {
    return _py_dict_getitem_by_int(
      self,
      key,
    );
  }

  late final _py_dict_getitem_by_intPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(py_Ref, py_i64)>>(
          'py_dict_getitem_by_int');
  late final _py_dict_getitem_by_int =
      _py_dict_getitem_by_intPtr.asFunction<int Function(py_Ref, int)>();

  /// true: success, false: error
  bool py_dict_setitem_by_str(
    py_Ref self,
    ffi.Pointer<ffi.Char> key,
    py_Ref val,
  ) {
    return _py_dict_setitem_by_str(
      self,
      key,
      val,
    );
  }

  late final _py_dict_setitem_by_strPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(py_Ref, ffi.Pointer<ffi.Char>,
              py_Ref)>>('py_dict_setitem_by_str');
  late final _py_dict_setitem_by_str = _py_dict_setitem_by_strPtr
      .asFunction<bool Function(py_Ref, ffi.Pointer<ffi.Char>, py_Ref)>();

  /// true: success, false: error
  bool py_dict_setitem_by_int(
    py_Ref self,
    int key,
    py_Ref val,
  ) {
    return _py_dict_setitem_by_int(
      self,
      key,
      val,
    );
  }

  late final _py_dict_setitem_by_intPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref, py_i64, py_Ref)>>(
          'py_dict_setitem_by_int');
  late final _py_dict_setitem_by_int = _py_dict_setitem_by_intPtr
      .asFunction<bool Function(py_Ref, int, py_Ref)>();

  /// -1: error, 0: not found, 1: found (and deleted)
  int py_dict_delitem_by_str(
    py_Ref self,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _py_dict_delitem_by_str(
      self,
      key,
    );
  }

  late final _py_dict_delitem_by_strPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(py_Ref, ffi.Pointer<ffi.Char>)>>(
      'py_dict_delitem_by_str');
  late final _py_dict_delitem_by_str = _py_dict_delitem_by_strPtr
      .asFunction<int Function(py_Ref, ffi.Pointer<ffi.Char>)>();

  /// -1: error, 0: not found, 1: found (and deleted)
  int py_dict_delitem_by_int(
    py_Ref self,
    int key,
  ) {
    return _py_dict_delitem_by_int(
      self,
      key,
    );
  }

  late final _py_dict_delitem_by_intPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(py_Ref, py_i64)>>(
          'py_dict_delitem_by_int');
  late final _py_dict_delitem_by_int =
      _py_dict_delitem_by_intPtr.asFunction<int Function(py_Ref, int)>();

  /// true: success, false: error
  bool py_dict_apply(
    py_Ref self,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Bool Function(
                    py_Ref key, py_Ref val, ffi.Pointer<ffi.Void> ctx)>>
        f,
    ffi.Pointer<ffi.Void> ctx,
  ) {
    return _py_dict_apply(
      self,
      f,
      ctx,
    );
  }

  late final _py_dict_applyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              py_Ref,
              ffi.Pointer<
                  ffi.NativeFunction<
                      ffi.Bool Function(
                          py_Ref key, py_Ref val, ffi.Pointer<ffi.Void> ctx)>>,
              ffi.Pointer<ffi.Void>)>>('py_dict_apply');
  late final _py_dict_apply = _py_dict_applyPtr.asFunction<
      bool Function(
          py_Ref,
          ffi.Pointer<
              ffi.NativeFunction<
                  ffi.Bool Function(
                      py_Ref key, py_Ref val, ffi.Pointer<ffi.Void> ctx)>>,
          ffi.Pointer<ffi.Void>)>();

  /// noexcept
  int py_dict_len(
    py_Ref self,
  ) {
    return _py_dict_len(
      self,
    );
  }

  late final _py_dict_lenPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(py_Ref)>>('py_dict_len');
  late final _py_dict_len = _py_dict_lenPtr.asFunction<int Function(py_Ref)>();

  /// linalg module
  void py_newvec2(
    py_OutRef out,
    c11_vec2 arg1,
  ) {
    return _py_newvec2(
      out,
      arg1,
    );
  }

  late final _py_newvec2Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef, c11_vec2)>>(
          'py_newvec2');
  late final _py_newvec2 =
      _py_newvec2Ptr.asFunction<void Function(py_OutRef, c11_vec2)>();

  void py_newvec3(
    py_OutRef out,
    c11_vec3 arg1,
  ) {
    return _py_newvec3(
      out,
      arg1,
    );
  }

  late final _py_newvec3Ptr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_OutRef, c11_vec3)>>(
          'py_newvec3');
  late final _py_newvec3 =
      _py_newvec3Ptr.asFunction<void Function(py_OutRef, c11_vec3)>();

  void py_newvec2i(
    py_OutRef out,
    c11_vec2i arg1,
  ) {
    return _py_newvec2i(
      out,
      arg1,
    );
  }
